WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292368
CommandEvent shouldn't be composed
https://bugs.webkit.org/show_bug.cgi?id=292368
Summary
CommandEvent shouldn't be composed
Luke Warlow
Reported
2025-05-01 03:21:11 PDT
See
https://github.com/whatwg/html/pull/11255
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-08 03:22:12 PDT
<
rdar://problem/150922493
>
Luke Warlow
Comment 2
2025-05-23 03:17:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45823
EWS
Comment 3
2025-08-20 07:29:15 PDT
Committed
298956@main
(b4411b6bfe9e): <
https://commits.webkit.org/298956@main
> Reviewed commits have been landed. Closing PR #45823 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug