Align CommandEvent with specification https://bugs.webkit.org/show_bug.cgi?id=292368

Reviewed by Tim Nguyen.

CommandEvent is no longer composed.

Also fix the retargeting behaviour to not leak shadow dom contents, in case event.currentTarget is null.

Canonical link: https://commits.webkit.org/298956@main