Source/WebCore/dom/CommandEvent.cpp
@@ -72,7 +72,10 @@ RefPtr<Element> CommandEvent::source() const
         Ref node = treeScope->retargetToScope(*m_source.get());
         return &downcast<Element>(node).get();
     }
-    return m_source;
+
+    Ref treeScope = m_source->treeScope().documentScope();
+    Ref node = treeScope->retargetToScope(*m_source.get());
+    return &downcast<Element>(node).get();
 }
 
 } // namespace WebCore
